Lots of updates

--- a/AdvancedTopicsInPlanning.ipynb
+++ b/AdvancedTopicsInPlanning.ipynb
@@ -8,6 +8,15 @@
     "\n",
     "# Chapter 12. Advanced Topics in Planning\n",
     "\n",
+    "Multi-goal planning\n",
+    "-------------------------\n",
+    "\n",
+    "### Planning with goal sets\n",
+    "\n",
+    "### Tours\n",
+    "\n",
+    "### Inspection planning\n",
+    "\n",
     "\n",
     "Multi-agent planning\n",
     "--------------------\n",
@@ -63,7 +72,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.5.2"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
