--- a/Book.ipynb
+++ b/Book.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "University of Illinois at Urbana-Champaign\n",
     "\n",
-    "Last update: 1/9/2020\n",
+    "Last update: 11/11/2020\n",
     "\n",
     "\n",
     "Table of Contents\n",
@@ -29,14 +29,14 @@
     "  * [Chapter 4. 3D rotations](3DRotations.ipynb)\n",
     "  * [Chapter 5. Robot kinematics](Kinematics.ipynb)\n",
     "  * [Chapter 6. Inverse kinematics](InverseKinematics.ipynb)\n",
-    "  * [Chapter 7. Representing geometry](Geometry.ipynb) **text 90% complete, figures 60% complete**\n",
+    "  * [Chapter 7. Representing geometry](Geometry.ipynb) **text complete, figures 85% complete**\n",
     "\n",
     "* Section III. Motion Planning\n",
     "\n",
-    "  * [Chapter 8. What is motion planning?](WhatIsMotionPlanning.ipynb) **text 95% complete, figures 80% complete**\n",
-    "  * [Chapter 9. Motion planning in simple geometric spaces](GeometricMotionPlanning.ipynb) **85% complete**\n",
-    "  * [Chapter 10. Motion planning in higher dimensions](MotionPlanningHigherDimensions.ipynb) **text 95% complete, figures 80% complete**\n",
-    "  * [Chapter 11. Planning with dynamics and uncertainty](PlanningWithDynamicsAndUncertainty.ipynb) **text 85% complete, figures 70% complete**\n",
+    "  * [Chapter 8. What is motion planning?](WhatIsMotionPlanning.ipynb)\n",
+    "  * [Chapter 9. Motion planning in simple geometric spaces](GeometricMotionPlanning.ipynb) \n",
+    "  * [Chapter 10. Motion planning in higher dimensions](MotionPlanningHigherDimensions.ipynb) **text complete, figures 80% complete**\n",
+    "  * [Chapter 11. Planning with dynamics and uncertainty](PlanningWithDynamicsAndUncertainty.ipynb) **text 95% complete, figures 70% complete**\n",
     "  * [Chapter 12. Advanced topics in planning](AdvancedTopicsInPlanning.ipynb) **incomplete**\n",
     "\n",
     "* Section IV. Dynamics and Control\n",
@@ -75,7 +75,7 @@
     "\n",
     "  * [B.1. Numerical errors](NumericalErrors.ipynb)\n",
     "  * [B.2. Matrix computations](MatrixComputations.ipynb) **20% complete**\n",
-    "  * [B.3. Optimization](Optimization.ipynb) **text 80% complete, needs figures**\n",
+    "  * [B.3. Optimization](Optimization.ipynb) **text 90% complete, figures 10% complete**\n",
     "\n",
     "* Appendix C. Computational methods \n",
     "\n",
@@ -99,8 +99,8 @@
     "1. Install software for running the notebook:\n",
     "\n",
     "  * [Git](https://git-scm.com/download)\n",
-    "  * Python 2.7 or 3.4+ and [Jupyter Notebook](http://jupyter.org), or a Python distribution like Anaconda.\n",
-    "  * [Klamp't](https://github.com/krishauser/Klampt) 0.8.1+ Python API.\n",
+    "  * Python 3.4+ and [Jupyter Notebook](http://jupyter.org), or a Python distribution like Anaconda.\n",
+    "  * [Klamp't](https://github.com/krishauser/Klampt) 0.8.3+ Python API.\n",
     "  * [Klampt-jupyter-extension](http://github.com/krishauser/Klampt-jupyter-extension) for live Klamp't windows.\n",
     "  * [jupyter_contrib_nbextensions](https://github.com/ipython-contrib/jupyter_contrib_nbextensions) for LaTeX and table of content support. \n",
     "  \n",
@@ -163,7 +163,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.5.2"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
