--- a/GraphSearch.ipynb
+++ b/GraphSearch.ipynb
@@ -148,14 +148,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Simple graph adj list: {'A': ['B', 'C'], 'B': ['E'], 'C': ['B', 'D'], 'D': [], 'E': ['B', 'D']}\n",
+      "Simple graph adj list: {'C': ['B', 'D'], 'D': [], 'A': ['B', 'C'], 'E': ['B', 'D'], 'B': ['E']}\n",
       "Running dijkstra's...\n",
       "Dijkstra's succeeded in 4 iterations\n",
       "Path in simple graph: ['A', 'C', 'D']\n"
@@ -163,6 +163,7 @@
     }
    ],
    "source": [
+    "#Demonstration of Dijkstra's algorithm. Note that this code can be found in rsbook_code.utilities.search\n",
     "from __future__ import print_function,division\n",
     "\n",
     "#dijkstra's algorithm\n",
@@ -242,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +351,7 @@
     }
    ],
    "source": [
-    "#Below is code for the A* algorithm\n",
+    "#Below is code for the A* algorithm. Note that this code can be found in rsbook_code.utilities.search\n",
     "\n",
     "from IPython.display import display,Markdown\n",
     "\n",
@@ -448,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -573,7 +574,7 @@
     }
    ],
    "source": [
-    "#Below is code for the A* algorithm\n",
+    "#Below is code for the implicit A* algorithm. Note that this code can be found in rsbook_code.utilities.search\n",
     "\n",
     "def astar_implicit(successors,s,g,cost=(lambda v,w:1),heuristic=(lambda v:0),verbose=1):\n",
     "    \"\"\"Completes an A* search on a large/infinite implicit graph.\n",
@@ -742,7 +743,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.5.2"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
