--- a/Probability.ipynb
+++ b/Probability.ipynb
@@ -466,25 +466,32 @@
     "### Multivariate Gaussians\n",
     "\n",
     "A multivariate Gaussian distribution over a vector-valued random\n",
-    "variable $\\textbf{X}=[X_1,...,X_n]^T \\in \\mathbb{R}^n$ with mean vector\n",
-    "$\\boldsymbol{\\mu}$ and covariance matrix $\\Sigma$ has the density\n",
+    "variable $\\mathbf{X}=[X_1,...,X_n]^T \\in \\mathbb{R}^n$ with mean vector\n",
+    "$\\mathbf{\\mu}$ and covariance matrix $\\Sigma$ has the density\n",
     "function:\n",
-    "$$P(\\textbf{x}) = N(\\textbf{x};\\boldsymbol{\\mu},\\Sigma) = \\frac{1}{(2\\pi)^{n/2}\\sqrt{|\\Sigma|}} e^{-\\frac{1}{2} (\\textbf{x}-\\boldsymbol{\\mu})^T \\Sigma^{-1} (\\textbf{x}-\\boldsymbol{\\mu})}.\n",
+    "$$P(\\mathbf{x}) = N(\\mathbf{x};\\mathbf{\\mu},\\Sigma) = \\frac{1}{(2\\pi)^{n/2}\\sqrt{|\\Sigma|}} e^{-\\frac{1}{2} (\\mathbf{x}-\\mathbf{\\mu})^T \\Sigma^{-1} (\\mathbf{x}-\\mathbf{\\mu})}.\n",
     "\\label{eq:MultivariateGaussian}$$ Like the (univariate) Gaussian\n",
-    "distribution, it has a peak at $x=\\boldsymbol{\\mu}$, and its spread is\n",
+    "distribution, it has a peak at $x=\\mathbf{\\mu}$, and its spread is\n",
     "determined by the matrix $\\Sigma$.\n",
     "[Fig. 1](#fig:Gaussian) shows the pdf of a bivariate Gaussian with\n",
-    "$\\boldsymbol{\\mu}=0$ and $\\Sigma=I$.\n",
+    "$\\mathbf{\\mu}=0$ and $\\Sigma=I$.\n",
     "\n",
-    "The *covariance matrix* is defined as $$\\Sigma_{ij} = Cov[X_i,X_j].$$\n",
+    "The *covariance matrix* is defined as\n",
+    "\n",
+    "$$\\Sigma_{ij} = Cov[X_i,X_j].$$\n",
+    "\n",
     "$\\Sigma$ must be symmetric positive definite as well. Its diagonal\n",
-    "entries define the variance of individual elements of $\\textbf{x}$, while the\n",
+    "entries define the variance of individual elements of $\\mathbf{x}$, while the\n",
     "off-diagonals determine how much it is skewed.\n",
     "\n",
     "For example, consider a 2D Gaussian with mean\n",
-    "$\\boldsymbol{\\mu} = \\begin{bmatrix}\\mu_1 \\\\ \\mu_2 \\end{bmatrix}$ and covariance\n",
-    "$$\\Sigma = \\begin{bmatrix}\\Sigma_1 & \\Sigma_{12} \\\\ \\Sigma_{12} & \\Sigma_{2} \\end{bmatrix}.$$ If\n",
-    "$\\Sigma_{12} = 0$, then $X_1$ and $X_2$ are independent, with respective\n",
+    "$\\mathbf{\\mu} = \\begin{bmatrix} \\mu_{1} \\\\ \\mu_{2} \\end{bmatrix}$\n",
+    "\n",
+    "and covariance\n",
+    "\n",
+    "$$\\Sigma = \\begin{bmatrix}\\Sigma_1 & \\Sigma_{12} \\\\ \\Sigma_{12} & \\Sigma_{2} \\end{bmatrix}.$$\n",
+    "\n",
+    "If $\\Sigma_{12} = 0$, then $X_1$ and $X_2$ are independent, with respective\n",
     "distributions $X_1 \\sim N(\\mu_1,\\Sigma_1)$ and\n",
     "$X_2 \\sim N(\\mu_2,\\Sigma_2)$. Otherwise, the marginal distributions stay\n",
     "the same: $$\\begin{aligned}\n",
@@ -500,24 +507,24 @@
     "\n",
     "#### Stacking of multivariate Gaussians\n",
     "Independent multivariate Gaussian variables can be stacked according to\n",
-    "the following rule. If $\\textbf{X} \\sim N(\\boldsymbol{\\mu}_X,\\Sigma_X)$ and\n",
-    "$\\textbf{Y} \\sim N(\\boldsymbol{\\mu}_Y,\\Sigma_Y)$ are independent, then\n",
-    "$$\\textbf{Z} = \\begin{bmatrix}\\textbf{X} \\\\ \\textbf{Y} \\end{bmatrix} \\sim N\\left(\\begin{bmatrix}\\boldsymbol{\\mu}_X \\\\ \\boldsymbol{\\mu}_Y \\end{bmatrix}, \\begin{bmatrix}\\Sigma_X & 0 \\\\ 0 & \\Sigma_Y \\end{bmatrix}\\right)$$\n",
+    "the following rule. If $\\mathbf{X} \\sim N(\\mathbf{\\mu}_X,\\Sigma_X)$ and\n",
+    "$\\mathbf{Y} \\sim N(\\mathbf{\\mu}_Y,\\Sigma_Y)$ are independent, then\n",
+    "$$\\mathbf{Z} = \\begin{bmatrix}\\mathbf{X} \\\\ \\mathbf{Y} \\end{bmatrix} \\sim N\\left(\\begin{bmatrix}\\mathbf{\\mu}_X \\\\ \\mathbf{\\mu}_Y \\end{bmatrix}, \\begin{bmatrix}\\Sigma_X & 0 \\\\ 0 & \\Sigma_Y \\end{bmatrix}\\right)$$\n",
     "where the mean and covariance matrix are written in block-matrix form.\n",
     "\n",
     "#### Marginalization of multivariate Gaussians\n",
-    "If $\\textbf{Z} = \\begin{bmatrix}\\textbf{X} \\\\ \\textbf{Y} \\end{bmatrix}$ is Gaussian:\n",
-    "$$\\textbf{Z} = \\begin{bmatrix}\\textbf{X} \\\\ \\textbf{Y} \\end{bmatrix} \\sim N\\left( \\begin{bmatrix}\\boldsymbol{\\mu}_X \\\\ \\boldsymbol{\\mu}_Y \\end{bmatrix}, \\begin{bmatrix} \\Sigma_X & \\Sigma_{XY} \\\\ \\Sigma_{YX} & \\Sigma_Y\\end{bmatrix} \\right)$$\n",
-    "then the marginal distribution of $\\textbf{X}$ is\n",
-    "$\\textbf{X} \\sim N(\\boldsymbol{\\mu}_X,\\Sigma_X)$, and the marginal\n",
-    "distribution of $\\textbf{y}$ is $\\textbf{Y} \\sim N(\\boldsymbol{\\mu}_Y,\\Sigma_Y)$.\n",
+    "If $\\mathbf{Z} = \\begin{bmatrix}\\mathbf{X} \\\\ \\mathbf{Y} \\end{bmatrix}$ is Gaussian:\n",
+    "$$\\mathbf{Z} = \\begin{bmatrix}\\mathbf{X} \\\\ \\mathbf{Y} \\end{bmatrix} \\sim N\\left( \\begin{bmatrix}\\mathbf{\\mu}_X \\\\ \\mathbf{\\mu}_Y \\end{bmatrix}, \\begin{bmatrix} \\Sigma_X & \\Sigma_{XY} \\\\ \\Sigma_{YX} & \\Sigma_Y\\end{bmatrix} \\right)$$\n",
+    "then the marginal distribution of $\\mathbf{X}$ is\n",
+    "$\\mathbf{X} \\sim N(\\mathbf{\\mu}_X,\\Sigma_X)$, and the marginal\n",
+    "distribution of $\\mathbf{y}$ is $\\mathbf{Y} \\sim N(\\mathbf{\\mu}_Y,\\Sigma_Y)$.\n",
     "\n",
     "\n",
     "![fig:GaussianTransform](figures/appendix/gaussian_linear_transform.svg)\n",
     "\n",
     "<div class=\"figcaption\"><a name=\"fig:GaussianTransform\">Figure 3</a>.\n",
     "    An affine transform of a Gaussian distribution is also a Gaussian. A\n",
-    "transform $A\\textbf{x}+\\textbf{b}$ (left) is applied to an initial zero-mean\n",
+    "transform $A\\mathbf{x}+\\mathbf{b}$ (left) is applied to an initial zero-mean\n",
     "distribution, whose density is displayed in the leftmost contour plot.\n",
     "The middle contour plot displays the density of the resulting\n",
     "distribution. Applying the transform again yields a density in the\n",
@@ -527,35 +534,35 @@
     "\n",
     "Affine transformations of multivariate Gaussians are also Gaussian\n",
     "([Fig. 3](#fig:GaussianTransform)). If\n",
-    "$\\textbf{X} \\sim N(\\boldsymbol{\\mu},\\Sigma)$, then for any appropriately\n",
-    "sized matrix $A$ and vector $\\textbf{b}$, $$A\\textbf{X}+\\textbf{b} \\sim N(A\\boldsymbol{\\mu}+\\textbf{b},A\\Sigma A^T).$$ \n",
-    "More specifically, $\\textbf{X}$ and $A\\textbf{X}+\\textbf{b}$ are jointly distributed\n",
+    "$\\mathbf{X} \\sim N(\\mathbf{\\mu},\\Sigma)$, then for any appropriately\n",
+    "sized matrix $A$ and vector $\\mathbf{b}$, $$A\\mathbf{X}+\\mathbf{b} \\sim N(A\\mathbf{\\mu}+\\mathbf{b},A\\Sigma A^T).$$ \n",
+    "More specifically, $\\mathbf{X}$ and $A\\mathbf{X}+\\mathbf{b}$ are jointly distributed\n",
     "according to:\n",
-    "$$\\begin{bmatrix}\\textbf{X} \\\\ A\\textbf{X}+\\textbf{b} \\end{bmatrix} \\sim N\\left(\\begin{bmatrix}\\boldsymbol{\\mu} \\\\ A\\boldsymbol{\\mu}+\\textbf{b} \\end{bmatrix},\\begin{bmatrix}\\Sigma & \\Sigma A^T \\\\ A\\Sigma & A\\Sigma A^T\\end{bmatrix}\\right).$$\n",
+    "$$\\begin{bmatrix}\\mathbf{X} \\\\ A\\mathbf{X}+\\mathbf{b} \\end{bmatrix} \\sim N\\left(\\begin{bmatrix}\\mathbf{\\mu} \\\\ A\\mathbf{\\mu}+\\mathbf{b} \\end{bmatrix},\\begin{bmatrix}\\Sigma & \\Sigma A^T \\\\ A\\Sigma & A\\Sigma A^T\\end{bmatrix}\\right).$$\n",
     "\n",
     "#### Sum of multivariate Gaussians\n",
     "The sum of independent multivariate Gaussians is also Gaussian, which\n",
     "can be derived by stacking and linear transformation rule. If\n",
-    "$\\textbf{X} \\sim N(\\boldsymbol{\\mu}_X,\\Sigma_X)$ and\n",
-    "$\\textbf{Y} \\sim N(\\boldsymbol{\\mu}_Y,\\Sigma_Y)$ are independent $n$-D\n",
+    "$\\mathbf{X} \\sim N(\\mathbf{\\mu}_X,\\Sigma_X)$ and\n",
+    "$\\mathbf{Y} \\sim N(\\mathbf{\\mu}_Y,\\Sigma_Y)$ are independent $n$-D\n",
     "Gaussian variables, then\n",
-    "$$\\textbf{Z} = \\textbf{X}+\\textbf{Y} = [I_n \\quad I_n]\\begin{bmatrix}\\textbf{X} \\\\ \\textbf{Y} \\end{bmatrix} = N(\\boldsymbol{\\mu}_X+\\boldsymbol{\\mu}_Y,\\Sigma_X+\\Sigma_Y)$$\n",
+    "$$\\mathbf{Z} = \\mathbf{X}+\\mathbf{Y} = [I_n \\quad I_n]\\begin{bmatrix}\\mathbf{X} \\\\ \\mathbf{Y} \\end{bmatrix} = N(\\mathbf{\\mu}_X+\\mathbf{\\mu}_Y,\\Sigma_X+\\Sigma_Y)$$\n",
     "where $[I_n \\quad I_n]$ is the horizontal block matrix of two identity\n",
     "matrices.\n",
     "\n",
     "#### Conditioning of multivariate Gaussians\n",
     "Conditional distributions of multivariate Gaussians are also Gaussian.\n",
-    "Specifically, if $Val(\\textbf{X}) = \\mathbb{R}^n$ and\n",
-    "$Val(\\textbf{Y}) = \\mathbb{R}^m$ are jointly Gaussian, that is,\n",
-    "$$\\begin{bmatrix}{\\textbf{X}} \\\\ {\\textbf{Y}} \\end{bmatrix} \\sim N\\left(\\begin{bmatrix}{\\boldsymbol{\\mu}_X} \\\\ {\\boldsymbol{\\mu}_Y} \\end{bmatrix},\\begin{bmatrix}{\\Sigma_X}&{\\Sigma_{XY}} \\\\ {\\Sigma_{XY}^T}&{\\Sigma_Y} \\end{bmatrix}\\right),$$\n",
-    "then the conditional distribution of $\\textbf{X}$ given that $\\textbf{Y}=\\textbf{y}$ is\n",
+    "Specifically, if $Val(\\mathbf{X}) = \\mathbb{R}^n$ and\n",
+    "$Val(\\mathbf{Y}) = \\mathbb{R}^m$ are jointly Gaussian, that is,\n",
+    "$$\\begin{bmatrix}{\\mathbf{X}} \\\\ {\\mathbf{Y}} \\end{bmatrix} \\sim N\\left(\\begin{bmatrix}{\\mathbf{\\mu}_X} \\\\ {\\mathbf{\\mu}_Y} \\end{bmatrix},\\begin{bmatrix}{\\Sigma_X}&{\\Sigma_{XY}} \\\\ {\\Sigma_{XY}^T}&{\\Sigma_Y} \\end{bmatrix}\\right),$$\n",
+    "then the conditional distribution of $\\mathbf{X}$ given that $\\mathbf{Y}=\\mathbf{y}$ is\n",
     "also Gaussian:\n",
-    "$$P(\\textbf{x}|\\textbf{y}) = N\\left( \\textbf{x};\\boldsymbol{\\mu}_X+\\Sigma_{XY}\\Sigma_Y^{-1}(\\textbf{y}-\\boldsymbol{\\mu}_Y),\\Sigma_X - \\Sigma_{XY}\\Sigma_Y^{-1}\\Sigma_{XY}^T \\right)\n",
+    "$$P(\\mathbf{x}|\\mathbf{y}) = N\\left( \\mathbf{x};\\mathbf{\\mu}_X+\\Sigma_{XY}\\Sigma_Y^{-1}(\\mathbf{y}-\\mathbf{\\mu}_Y),\\Sigma_X - \\Sigma_{XY}\\Sigma_Y^{-1}\\Sigma_{XY}^T \\right)\n",
     "\\label{eq:GaussianConditioning}$$ It can be observed that the mean of\n",
     "the new distribution depends on the value of $y$, but the covariance\n",
-    "does not. Observe also that if $\\textbf{X}$ and $\\textbf{Y}$ are independent\n",
-    "($\\Sigma_{XY}=0$), then knowing the value of $\\textbf{Y}$ does not change the\n",
-    "marginal distribution of $\\textbf{X}$.\n",
+    "does not. Observe also that if $\\mathbf{X}$ and $\\mathbf{Y}$ are independent\n",
+    "($\\Sigma_{XY}=0$), then knowing the value of $\\mathbf{Y}$ does not change the\n",
+    "marginal distribution of $\\mathbf{X}$.\n",
     "\n",
     "[Fig. 2](#fig:GaussianMarginalization), right illustrates conditioning\n",
     "on a zero-mean Gaussian with $$\\Sigma=\\begin{bmatrix}{0.25}&{0.3} \\\\ {0.3}&{1} \\end{bmatrix}$$ at\n",
@@ -589,7 +596,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.5.2"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
