--- a/LinearAlgebra.ipynb
+++ b/LinearAlgebra.ipynb
@@ -15,49 +15,49 @@
    "source": [
     "## Vector notation and definitions\n",
     "\n",
-    "An $n$-dimensional *vector* $\\textbf{x}$ is a tuple of real numbers\n",
-    "$\\textbf{x}=(x_1,\\ldots,x_n) \\in \\mathbb{R}^{n}$. In later portions of this course,\n",
+    "An $n$-dimensional *vector* $\\mathbf{x}$ is a tuple of real numbers\n",
+    "$\\mathbf{x}=(x_1,\\ldots,x_n) \\in \\mathbb{R}^{n}$. In later portions of this course,\n",
     "we will usually drop the boldface.\n",
     "\n",
     "Vectors can be added and subtracted component-wise, can be multipled by\n",
     "elements of $\\mathbb{R}$, and can be divided by elements of\n",
-    "$\\mathbb{R} \\setminus \\{0\\}$. There is a zero vector $\\textbf{0}$ with all\n",
+    "$\\mathbb{R} \\setminus \\{0\\}$. There is a zero vector $\\mathbf{0}$ with all\n",
     "elements equal to zero. Each element has a component-wise negation,\n",
-    "$-\\textbf{x}$. We will also on occasion refer to the standard *basis vectors*\n",
-    "$\\textbf{e}_{1},\\ldots,\\textbf{e}_{n}$, where $\\textbf{e}_{i}$ has all elements equal to 0\n",
+    "$-\\mathbf{x}$. We will also on occasion refer to the standard *basis vectors*\n",
+    "$\\mathbf{e}_{1},\\ldots,\\mathbf{e}_{n}$, where $\\mathbf{e}_{i}$ has all elements equal to 0\n",
     "except for the $i$'th element, which is equal to 1. More commonly, we\n",
-    "refer to $\\textbf{e}_{1}$ as the x-axis, $\\textbf{e}_{2}$ as the y-axis, and so on.\n",
+    "refer to $\\mathbf{e}_{1}$ as the x-axis, $\\mathbf{e}_{2}$ as the y-axis, and so on.\n",
     "\n",
     "> **Dot product**. The dot product is a function that takes two vectors\n",
-    "> $\\textbf{x}=(x_1,\\ldots,x_n)$ and $\\textbf{y}=(y_1,\\ldots,y_n)$ and returns a real\n",
+    "> $\\mathbf{x}=(x_1,\\ldots,x_n)$ and $\\mathbf{y}=(y_1,\\ldots,y_n)$ and returns a real\n",
     "> number, and is given by the expression\n",
-    "> $$\\textbf{x} \\cdot \\textbf{y} = \\sum_{i=1}^n x_i y_i.$$\n",
+    "> $$\\mathbf{x} \\cdot \\mathbf{y} = \\sum_{i=1}^n x_i y_i.$$\n",
     "\n",
-    "For example, $\\textbf{x} \\cdot \\textbf{e}_{i} = x_i$.\n",
+    "For example, $\\mathbf{x} \\cdot \\mathbf{e}_{i} = x_i$.\n",
     "\n",
     "> **Orthogonal vectors**. Two vectors whose dot product is identically zero are called\n",
     "> *orthogonal*.\n",
     "\n",
-    "For example, $\\textbf{e}_{i} \\cdot \\textbf{e}_{j} = 0$ for any pair $i\\neq j$, and so $\\textbf{e}_{i}$ and $\\textbf{e}_{j}$ are orthogonal.  Also, $\\begin{bmatrix}1 \\\\ 2 \\end{bmatrix} \\cdot \\begin{bmatrix} -6 \\\\ 3 \\end{bmatrix} = 0$, so these vectors are orthogonal as well.\n",
+    "For example, $\\mathbf{e}_{i} \\cdot \\mathbf{e}_{j} = 0$ for any pair $i\\neq j$, and so $\\mathbf{e}_{i}$ and $\\mathbf{e}_{j}$ are orthogonal.  Also, $\\begin{bmatrix}1 \\\\ 2 \\end{bmatrix} \\cdot \\begin{bmatrix} -6 \\\\ 3 \\end{bmatrix} = 0$, so these vectors are orthogonal as well.\n",
     "\n",
     "> **Norms**. A norm describes some notion of vector magnitude. The standard Euclidean\n",
-    "> norm $\\|\\cdot\\|$ is defined as $\\|\\textbf{x}\\|=\\sqrt{\\textbf{x} \\cdot \\textbf{x}}$.\n",
+    "> norm $\\|\\cdot\\|$ is defined as $\\|\\mathbf{x}\\|=\\sqrt{\\mathbf{x} \\cdot \\mathbf{x}}$.\n",
     "\n",
-    "Some identities are $\\|\\textbf{0}\\|=0$, $\\|\\textbf{x}\\| > 0$ if\n",
-    "$\\textbf{x} \\neq \\textbf{0}$, and $\\|c\\textbf{x}\\| = |c|\\,\\|\\textbf{x}\\|$ for all real values $c$.\n",
+    "Some identities are $\\|\\mathbf{0}\\|=0$, $\\|\\mathbf{x}\\| > 0$ if\n",
+    "$\\mathbf{x} \\neq \\mathbf{0}$, and $\\|c\\mathbf{x}\\| = |c|\\,\\|\\mathbf{x}\\|$ for all real values $c$.\n",
     "\n",
-    "> **Unit vectors**. A unit vector is a vector with unit norm: $\\|\\textbf{x}\\|=1$.\n",
+    "> **Unit vectors**. A unit vector is a vector with unit norm: $\\|\\mathbf{x}\\|=1$.\n",
     "\n",
     "> **Euclidean distance**. The euclidean distance between two vectors is given by the norm of the\n",
-    "> difference between the vectors: $d(\\textbf{x},\\textbf{y}) = \\|\\textbf{x}-\\textbf{y}\\|$.\n",
+    "> difference between the vectors: $d(\\mathbf{x},\\mathbf{y}) = \\|\\mathbf{x}-\\mathbf{y}\\|$.\n",
     "\n",
     "It satisfies all the criteria of a metric, and hence vector spaces are metric spaces.\n",
     "\n",
     "> **Cosine angle formula**. The cosine of the angle between two unit vectors is equal to their dot\n",
-    "> product, i.e. $\\cos(\\theta) = \\textbf{a} \\cdot \\textbf{b}$.\n",
+    "> product, i.e. $\\cos(\\theta) = \\mathbf{a} \\cdot \\mathbf{b}$.\n",
     "\n",
-    "> **Linear Combinations**. $\\textbf{x}$ is a *linear combination* of a set of vectors\n",
-    "> $\\{\\textbf{a}_{1},\\ldots,\\textbf{a}_{m}\\}$ if $$\\textbf{x} = \\sum_{i=1}^m u_i \\textbf{a}_{i}$$ for\n",
+    "> **Linear Combinations**. $\\mathbf{x}$ is a *linear combination* of a set of vectors\n",
+    "> $\\{\\mathbf{a}_{1},\\ldots,\\mathbf{a}_{m}\\}$ if $$\\mathbf{x} = \\sum_{i=1}^m u_i \\mathbf{a}_{i}$$ for\n",
     "> some set of numbers $u_1,\\ldots,u_m$.\n"
    ]
   },
@@ -80,46 +80,46 @@
     "\n",
     "### Matrix-Vector Product\n",
     "\n",
-    "An $m\\times n$ matrix $A$ transforms vectors $\\textbf{x} =(x_1,\\ldots,x_n)$\n",
-    "into $m$-dimensional vectors $\\textbf{y} = (y_1,\\ldots,y_m) = A\\textbf{x}$ as\n",
+    "An $m\\times n$ matrix $A$ transforms vectors $\\mathbf{x} =(x_1,\\ldots,x_n)$\n",
+    "into $m$-dimensional vectors $\\mathbf{y} = (y_1,\\ldots,y_m) = A\\mathbf{x}$ as\n",
     "follows: $$\\begin{split}\n",
     "y_1 = \\sum_{j=1}^n A_{1j} x_j \\\\\n",
     "\\ldots \\\\\n",
     "y_m = \\sum_{j=1}^n A_{mj} x_j \\\\\n",
     "\\end{split}$$ Or, more concisely, $y_i = \\sum_{j=1}^n A_{ij} x_j$ for\n",
     "$i=1,\\ldots,m$. (Note that matrix-vector multiplication *is not\n",
-    "symmetric*, so $\\textbf{x} A$ is an invalid operation.)\n",
+    "symmetric*, so $\\mathbf{x} A$ is an invalid operation.)\n",
     "\n",
     "#### Linearity of matrix-vector multiplication\n",
     "\n",
     "We can see that matrix-vector multiplication is linear, that is\n",
-    "$A(a\\textbf{x}+b\\textbf{y}) = a A \\textbf{x} + b A \\textbf{y}$ for all $a$, $b$, $\\textbf{x}$,\n",
-    "and $\\textbf{y}$. It is also linear in terms of component-wise addition and\n",
+    "$A(a\\mathbf{x}+b\\mathbf{y}) = a A \\mathbf{x} + b A \\mathbf{y}$ for all $a$, $b$, $\\mathbf{x}$,\n",
+    "and $\\mathbf{y}$. It is also linear in terms of component-wise addition and\n",
     "multiplication of matrices, as long as the matrices are of the same\n",
     "size. More precisely, if $A$ and $B$ are both $m\\times n$ matrices, then\n",
-    "$(a A + b B)\\textbf{x} = a A\\textbf{x} + b B\\textbf{x}$ for all $a$, $b$, and $\\textbf{x}$.\n",
+    "$(a A + b B)\\mathbf{x} = a A\\mathbf{x} + b B\\mathbf{x}$ for all $a$, $b$, and $\\mathbf{x}$.\n",
     "\n",
     "#### Identity matrix\n",
     "One special matrix that occurs frequently is the $n\\times n$ *identity\n",
     "matrix* $I_n$, which has 0's in all off-diagonal positions $I_{ij}$ with\n",
     "$i\\neq j$, and 1's in all diagonal positions $I_{ii}$. It is significant\n",
-    "because $I_n \\textbf{x} = \\textbf{x}$ for all $\\textbf{x} \\in \\mathbb{R}^n$.\n",
+    "because $I_n \\mathbf{x} = \\mathbf{x}$ for all $\\mathbf{x} \\in \\mathbb{R}^n$.\n",
     "\n",
     "### Matrix Product\n",
     "\n",
     "When two linear transformations are performed one after the other, the\n",
     "result is also a linear transformation. Suppose $A$ is $m\\times n$, $B$\n",
-    "is $n \\times p$, and $\\textbf{x}$ is a $p$-dimensional vector, and consider\n",
-    "the result of $A(B\\textbf{x})$ (that is, first multiplying by $B$ and then\n",
+    "is $n \\times p$, and $\\mathbf{x}$ is a $p$-dimensional vector, and consider\n",
+    "the result of $A(B\\mathbf{x})$ (that is, first multiplying by $B$ and then\n",
     "multiplying the result by $A$). We see that\n",
-    "$$B\\textbf{x} = (\\sum_{j=1}^p B_{1j} x_j,\\ldots,\\sum_{j=1}^p B_{nj} x_j)$$\n",
+    "$$B\\mathbf{x} = (\\sum_{j=1}^p B_{1j} x_j,\\ldots,\\sum_{j=1}^p B_{nj} x_j)$$\n",
     "and\n",
-    "$$A \\textbf{y} = (\\sum_{k=1}^n A_{1k} y_k,\\ldots,\\sum_{k=1}^n A_{mk} y_k)$$\n",
+    "$$A \\mathbf{y} = (\\sum_{k=1}^n A_{1k} y_k,\\ldots,\\sum_{k=1}^n A_{mk} y_k)$$\n",
     "So\n",
-    "$$A (B \\textbf{x}) = \\left(\\sum_{k=1}^n A_{1k} (\\sum_{j=1}^p B_{kj} x_j),\\ldots,\\sum_{k=1}^n A_{mk} (\\sum_{j=1}^p B_{kj} x_j)\\right).$$\n",
+    "$$A (B \\mathbf{x}) = \\left(\\sum_{k=1}^n A_{1k} (\\sum_{j=1}^p B_{kj} x_j),\\ldots,\\sum_{k=1}^n A_{mk} (\\sum_{j=1}^p B_{kj} x_j)\\right).$$\n",
     "Rearranging the summations, we see that\n",
-    "$$A (B \\textbf{x}) = \\left(\\sum_{j=1}^p (\\sum_{k=1}^n A_{1k} B_{kj}) x_j),\\ldots,\\sum_{j=1}^p (\\sum_{k=1}^n A_{mk} B_{kj} x_j)\\right).$$\n",
-    "In other words, we could have $A(B\\textbf{x}) = C \\textbf{x}$ if we were to form a\n",
+    "$$A (B \\mathbf{x}) = \\left(\\sum_{j=1}^p (\\sum_{k=1}^n A_{1k} B_{kj}) x_j),\\ldots,\\sum_{j=1}^p (\\sum_{k=1}^n A_{mk} B_{kj} x_j)\\right).$$\n",
+    "In other words, we could have $A(B\\mathbf{x}) = C \\mathbf{x}$ if we were to form a\n",
     "matrix $C$ such that $$C_{ij} = \\sum_{k=1}^n A_{ik} B_{kj}$$ This is\n",
     "exactly the definition of the *matrix product*, and we say $C=AB$. The\n",
     "entry $C_{ij}$ of can also be obtained taking the dot-product of the\n",
@@ -127,14 +127,14 @@
     "\n",
     "#### Matrix product is associative but not symmetric\n",
     "By the above derivation we can drop the parentheses\n",
-    "$A(B\\textbf{x}) = (AB)\\textbf{x}$. So, matrix-vector and matrix-matrix\n",
+    "$A(B\\mathbf{x}) = (AB)\\mathbf{x}$. So, matrix-vector and matrix-matrix\n",
     "multiplication are *associative*. Note again however that matrix-matrix\n",
     "multiplication *is not symmetric*, that is $AB \\neq BA$ in general.\n",
     "\n",
     "#### Column and row vectors\n",
-    "Note that if we were to write an $n$-dimensional vector $\\textbf{x}$ stacked\n",
+    "Note that if we were to write an $n$-dimensional vector $\\mathbf{x}$ stacked\n",
     "in a $n\\times 1$ matrix $x$ (denoted in lowercase), we can turn the\n",
-    "matrix-vector $\\textbf{y}=A\\textbf{x}$ into the matrix product $y = A x$. Here, if\n",
+    "matrix-vector $\\mathbf{y}=A\\mathbf{x}$ into the matrix product $y = A x$. Here, if\n",
     "$A$ is an $m\\times n$ matrix, then $y$ is an $m\\times 1$ matrix.\n",
     "$$\\left[\\begin{array}{c}\n",
     "y_1 \\\\\n",
@@ -192,9 +192,9 @@
     "\n",
     "-   $A + A^T$ is symmetric.\n",
     "\n",
-    "-   The dot product $\\textbf{x} \\cdot \\textbf{y}$ is equal to $x^T y$, with $x$\n",
-    "    and $y$ denoting the column vector representations of $\\textbf{x}$ and\n",
-    "    $\\textbf{y}$, respectively.\n",
+    "-   The dot product $\\mathbf{x} \\cdot \\mathbf{y}$ is equal to $x^T y$, with $x$\n",
+    "    and $y$ denoting the column vector representations of $\\mathbf{x}$ and\n",
+    "    $\\mathbf{y}$, respectively.\n",
     "\n",
     "-   $x^T A y = y^T A^T x$, with $x$ and $y$ column vectors.\n",
     "\n",
@@ -244,7 +244,7 @@
     "An $n\\times n$ matrix $A$ is called *symmetric positive definite*\n",
     "(s.p.d.), or just positive definite, if it is symmetric ($A=A^T$) and\n",
     "satisfies the following condition:\n",
-    "$$\\textbf{x}^T A \\textbf{x} > 0 \\text{ for all }\\textbf{x}\\in \\mathbb{R}^n.$$ \n",
+    "$$\\mathbf{x}^T A \\mathbf{x} > 0 \\text{ for all }\\mathbf{x}\\in \\mathbb{R}^n.$$ \n",
     "Some useful properties include:\n",
     "- An identity matrix is s.p.d.\n",
     "- A scaling $A = cB$ of a s.p.d. matrix $B$ is s.p.d. iff $c > 0$.\n",
@@ -254,7 +254,7 @@
     "\n",
     "A matrix is positive semi-definite (p.s.d.) if the strict positivity\n",
     "condition is replaced with a nonnegativity condition:\n",
-    "$$\\textbf{x}^T A \\textbf{x} \\geq 0 \\text{ for all }\\textbf{x}\\in \\mathbb{R}^n.$$\n",
+    "$$\\mathbf{x}^T A \\mathbf{x} \\geq 0 \\text{ for all }\\mathbf{x}\\in \\mathbb{R}^n.$$\n",
     "- Any s.p.d. matrix is also p.s.d.\n",
     "- Any matrix $A=B^TB$ is also p.s.d.\n",
     "- A symmetric matrix with eigenvalues $\\lambda_1,\\ldots,\\lambda_n$ is symmetric positive definite if all $\\lambda_i \\geq 0, \\forall i=1,...,n$."
