Added section headings, discussion of Colab vs Jupyter

--- a/Book.ipynb
+++ b/Book.ipynb
@@ -11,9 +11,13 @@
     "\n",
     "University of Illinois at Urbana-Champaign\n",
     "\n",
-    "Last update: 11/11/2020\n",
-    "\n",
-    "\n",
+    "Last update: 12/28/2020"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Table of Contents\n",
     "=================\n",
     "\n",
@@ -81,26 +85,91 @@
     "\n",
     "  * [C.1. Data structures](DataStructures.ipynb)\n",
     "  * [C.2. Graph search](GraphSearch.ipynb)\n",
-    " \n",
-    "\n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "About\n",
     "=================\n",
     "\n",
     "This book is a work in progress!  The source material is my lecture notes from courses at Indiana University, Duke University, and University of Illinois at Urbana-Champaign, which are progressively being converted to Jupyter Notebook and HTML format. \n",
     "\n",
-    "The conversion tools that I am using may create broken matrix equations, links, references, or incorrectly formatted figures.  I am trying to correct them as I go, but I may miss some.  If you notice anything that needs correcting, please email me at [kkhauser@illinois.edu](mailto:kkhauser@illinois.edu).  Or better yet, make the corrections in the notebook directly and [issue a Git pull request](https://help.github.com/articles/about-pull-requests/).\n",
-    "\n",
-    "\n",
-    "Enabling the interactive Jupyter Notebook\n",
+    "The conversion tools that I am using may create broken matrix equations, links, references, or incorrectly formatted figures.  I am trying to correct them as I go, but I may miss some.  If you notice anything that needs correcting, please email me at [kkhauser@illinois.edu](mailto:kkhauser@illinois.edu).  Or better yet, make the corrections in the notebook directly and [issue a Git pull request](https://help.github.com/articles/about-pull-requests/).\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Working with Colab /  Jupyter Notebook\n",
     "==================\n",
     "\n",
-    "The book comes in HTML, PDF, and Jupyter Notebook formats, and the latter format contains in-browser examples that you can visualize and edit live in your browser.  Follow these steps to enable this format:\n",
+    "The book comes in [HTML](https://motion.cs.illinois.edu/RoboticSystems/), Jupyter Notebook, and [Google Colab](https://colab.research.google.com) formats, and the latter two formats contain inline code examples that you can visualize and edit live in your browser. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Running on Google Colab\n",
+    "\n",
+    "I am progressively updating the book and code examples to be compatible with Google Colab.  This is probably the easiest way to get started with the code examples!  Just click on the following link:\n",
+    "\n",
+    "https://colab.research.google.com/github/krishauser/RoboticSystemsBook/blob/master/Book.ipynb\n",
+    "\n",
+    "\n",
+    "*Colab pros*:\n",
+    "\n",
+    "- Runs everywhere\n",
+    "- Integrates nicely with Github: no need to \"git pull\".\n",
+    "- Klamp't can output static visualizations of 3D worlds and animations\n",
+    "\n",
+    "*Colab cons*:\n",
+    "\n",
+    "- Equations are not numbered and cross-references don't work. \n",
+    "- The Table of Contents feature only works with cells that start with a header. These are being updated slowly...\n",
+    "- Klamp't visualization windows are not interactive due to Colab security restrictions.\n",
+    "\n",
+    "*Colab installation*: \n",
+    "\n",
+    "At the top of each notebook, install Klampt by adding and running the following code cell:\n",
+    "\n",
+    "```\n",
+    "!pip install klampt\n",
+    "```\n",
+    "\n",
+    "That's it! "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Jupyter Notebook installation on local machine\n",
+    "\n",
+    "[Jupyter Notebook](https://jupyter.org/) is the native source of this book, and will allow you to run truly interactive examples.  \n",
+    "\n",
+    "*Jupyter pros*\n",
+    "\n",
+    "- Runs interactive Klamp't windows.\n",
+    "- All features supported\n",
+    "- Closer to production robotics code.\n",
+    "\n",
+    "*Jupyter cons*\n",
+    "\n",
+    "- Need to install on your local machine.\n",
+    "- Need to fiddle with Jupyter notebook extensions to get everything to work properly.\n",
+    "\n",
+    "*Jupyter Installation*:\n",
     "\n",
     "1. Install software for running the notebook:\n",
     "\n",
     "  * [Git](https://git-scm.com/download)\n",
     "  * Python 3.4+ and [Jupyter Notebook](http://jupyter.org), or a Python distribution like Anaconda.\n",
-    "  * [Klamp't](https://github.com/krishauser/Klampt) 0.8.3+ Python API.\n",
+    "  * [Klamp't](https://github.com/krishauser/Klampt) 0.8.5+ Python API.\n",
     "  * [Klampt-jupyter-extension](http://github.com/krishauser/Klampt-jupyter-extension) for live Klamp't windows.\n",
     "  * [jupyter_contrib_nbextensions](https://github.com/ipython-contrib/jupyter_contrib_nbextensions) for LaTeX and table of content support. \n",
     "  \n",
@@ -140,6 +209,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Known issues\n",
+    "============\n",
+    "\n",
+    "Jupyter Notebook LaTeX rendering uses MathJAX inside Markdown, which occasionally has trouble rendering equations.  If you see stray code like `= \\begin{equation}` etc, this is a [known rendering problem](https://github.com/jupyter/notebook/issues/2865) with multiple matrices."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -163,7 +242,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.7.3"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
