Added section breaks for Colab

--- a/Preface.ipynb
+++ b/Preface.ipynb
@@ -4,8 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# PREFACE\n",
-    "\n",
+    "# PREFACE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Purpose and scope\n",
     "\n",
     "Robotics is a field in adolescence. From its beginnings in the 1960s with industrial robots, robots have been a fixture in factories. Since then, robotics has been a topic of active research in academic and\n",
@@ -101,8 +106,13 @@
     "bookend the technical material with a broader context, the Introduction to\n",
     "Robots section discusses robotics history, and the Application Areas\n",
     "section discusses some of the domain knowledge employed in common\n",
-    "robotics applications.\n",
-    "\n",
+    "robotics applications."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Historical context\n",
     "\n",
     "*TODO*\n",
@@ -120,8 +130,13 @@
     "Springer Handbook of Robotics, Siciliano and Khatib.\n",
     "\n",
     "Conferences and journals: ICRA, IROS, IJRR, IEEE TRO, Auro, RSS, RA-L. Speciality conferences: HRI,\n",
-    "SSRR, ISRR, ISER, WAFR, IJFR, CoRL.\n",
-    "\n",
+    "SSRR, ISRR, ISER, WAFR, IJFR, CoRL.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Notes for students\n",
     "\n",
     "Robotics is a popular choice for teaching engineering and programming in\n",
@@ -148,8 +163,13 @@
     "technical reports, academic papers, and specialized advanced textbooks.\n",
     "Making a real-world product will also take a large amount of hacking\n",
     "(or, to say it more professionally: \"testing, evaluation, and\n",
-    "development\") to get right.\n",
-    "\n",
+    "development\") to get right."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Prerequisites\n",
     "\n",
     "This book is intended for an advanced undergraduate or beginning\n",
@@ -157,8 +177,13 @@
     "Calculus, linear algebra, and a few serious programming courses are\n",
     "essential for understanding the material. Background on multivariate\n",
     "calculus, introductory probability, data structures, and algorithms are\n",
-    "recommended, but not assumed by the text.\n",
-    "\n",
+    "recommended, but not assumed by the text."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Programming\n",
     "\n",
     "Programming is an essential skill for a roboticist, and knowledge of\n",
@@ -181,8 +206,13 @@
     "middleware package and package distribution framework in robotics.\n",
     "Hence, it is worthwhile for students to learn in conjunction with\n",
     "theory. At time of writing, ROS works best on the Linux Ubuntu OS, and\n",
-    "has a C++ and Python API.\n",
-    "\n",
+    "has a C++ and Python API."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "## Notes for instructors\n",
     "\n",
@@ -228,7 +258,7 @@
     "easier for students to digest the theory. Programming exercises in\n",
     "Klamp't corresponding to each chapter are provided with the book's\n",
     "supplementary material, and solutions to programming exercises can be\n",
-    "obtained from the author."
+    "obtained from the author.\n"
    ]
   },
   {
@@ -255,7 +285,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.7.3"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
